fix: align CSP with nonce-based middleware

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,32 +1,33 @@
-@import url("https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500&family=Montserrat:wght@500&display=swap");
-
 // Font Variables
+$font-family-dm: var(--font-dm-sans, "DM Sans"), Arial, sans-serif;
+$font-family-montserrat: var(--font-montserrat, "Montserrat"), Arial, sans-serif;
+
 // Desktop Fonts
-$font-desktop-dm-400-52: 400 52px "DM Sans", Arial;
-$font-desktop-dm-400-42: 400 42px "DM Sans", Arial;
-$font-desktop-dm-500-32: 500 32px "DM Sans", Arial;
-$font-desktop-dm-500-21: 500 21px "DM Sans", Arial;
-$font-desktop-dm-400-32: 400 32px "DM Sans", Arial;
-$font-desktop-dm-400-18: 400 18px "DM Sans", Arial;
-$font-desktop-montserrat-500-16: 500 16px/1.6 "Montserrat", Arial;
+$font-desktop-dm-400-52: 400 52px #{$font-family-dm};
+$font-desktop-dm-400-42: 400 42px #{$font-family-dm};
+$font-desktop-dm-500-32: 500 32px #{$font-family-dm};
+$font-desktop-dm-500-21: 500 21px #{$font-family-dm};
+$font-desktop-dm-400-32: 400 32px #{$font-family-dm};
+$font-desktop-dm-400-18: 400 18px #{$font-family-dm};
+$font-desktop-montserrat-500-16: 500 16px/1.6 #{$font-family-montserrat};
 
 /* Tablet Fonts */
-$font-tablet-dm-400-42: 400 42px "DM Sans", Arial;
-$font-tablet-dm-400-36: 400 36px "DM Sans", Arial;
-$font-tablet-dm-500-28: 500 28px "DM Sans", Arial;
-$font-tablet-dm-500-21: 500 21px "DM Sans", Arial;
-$font-tablet-dm-400-24: 400 24px "DM Sans", Arial;
-$font-tablet-dm-400-18: 400 18px "DM Sans", Arial;
-$font-tablet-montserrat-500-14: 500 14px/1.6 "Montserrat", Arial;
+$font-tablet-dm-400-42: 400 42px #{$font-family-dm};
+$font-tablet-dm-400-36: 400 36px #{$font-family-dm};
+$font-tablet-dm-500-28: 500 28px #{$font-family-dm};
+$font-tablet-dm-500-21: 500 21px #{$font-family-dm};
+$font-tablet-dm-400-24: 400 24px #{$font-family-dm};
+$font-tablet-dm-400-18: 400 18px #{$font-family-dm};
+$font-tablet-montserrat-500-14: 500 14px/1.6 #{$font-family-montserrat};
 
 // Mobile Fonts
-$font-mobile-dm-400-32: 400 32px "DM Sans", Arial;
-$font-mobile-dm-400-20: 400 20px "DM Sans", Arial;
-$font-mobile-dm-500-24: 500 24px "DM Sans", Arial;
-$font-mobile-dm-500-16: 500 16px "DM Sans", Arial;
-$font-mobile-dm-400-14: 400 14px "DM Sans", Arial;
-$font-mobile-dm-500-14: 500 14px "DM Sans", Arial;
-$font-mobile-montserrat-500-12: 500 12px "Montserrat", Arial;
+$font-mobile-dm-400-32: 400 32px #{$font-family-dm};
+$font-mobile-dm-400-20: 400 20px #{$font-family-dm};
+$font-mobile-dm-500-24: 500 24px #{$font-family-dm};
+$font-mobile-dm-500-16: 500 16px #{$font-family-dm};
+$font-mobile-dm-400-14: 400 14px #{$font-family-dm};
+$font-mobile-dm-500-14: 500 14px #{$font-family-dm};
+$font-mobile-montserrat-500-12: 500 12px #{$font-family-montserrat};
 
 // Color Variables
 $color-primary: #f8f2eb; // Primary color (White)
